fixed spacing around footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -98,3 +98,6 @@ html {
   }
 }
 
+.user-profile {
+  padding-bottom:3rem;
+}
